--- a/transperenting.ipynb
+++ b/transperenting.ipynb
@@ -586,62 +586,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
-    "out = cv2.VideoWriter('a.avi', fourcc, 5.0, (640, 480))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "import copy\n",
-    "cap= cv2.VideoCapture(0)\n",
-    "# fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
-    "# out = cv2.VideoWriter('b.avi', fourcc, 5.0, (640, 480))\n",
-    "status,pic=cap.read()\n",
-    "cv2.imshow('hi',pic)\n",
-    "cv2.waitKey()\n",
-    "black=(150,150,150)\n",
-    "while True:\n",
-    "    status,photo=cap.read()\n",
-    "    for i in range(photo.shape[0]):\n",
-    "        for j in range(photo.shape[1]):\n",
-    "            if photo[i,j,0]<black[0] and photo[i,j,1]<black[1] and photo[i,j,2]<black[2]:\n",
-    "                photo[i,j]=pic[i,j]\n",
-    "#     out.write(photo)\n",
-    "    cv2.imshow('hi',photo)\n",
-    "    if cv2.waitKey(10)==13:\n",
-    "        break\n",
-    "cv2.destroyAllWindows()\n",
-    "cap.release()\n",
-    "# out.release()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "cv2.imwrite('a.jpg',photo)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "collapsed": true
@@ -660,8 +604,8 @@
    },
    "outputs": [],
    "source": [
-    "cv2.imwrite('a1.jpg',pic[0])\n",
-    "cv2.imwrite('a2.jpg',pic[1])"
+    "# cv2.imwrite('a1.jpg',pic[0])\n",
+    "# cv2.imwrite('a2.jpg',pic[1])"
    ]
   },
   {
@@ -672,9 +616,9 @@
    },
    "outputs": [],
    "source": [
-    "gauss = cv2.GaussianBlur(photo, (7,7), 0)\n",
-    "# Apply Unsharp masking\n",
-    "unsharp_image = cv2.addWeighted(photo, 2, gauss, -1, 0)"
+    "# gauss = cv2.GaussianBlur(photo, (7,7), 0)\n",
+    "# # Apply Unsharp masking\n",
+    "# unsharp_image = cv2.addWeighted(photo, 2, gauss, -1, 0)"
    ]
   },
   {
@@ -685,7 +629,7 @@
    },
    "outputs": [],
    "source": [
-    "photo.shape[0]"
+    "# photo.shape[0]"
    ]
   },
   {
@@ -696,32 +640,32 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import cv2\n",
+    "# import numpy as np\n",
+    "# import cv2\n",
     "\n",
-    "cap = cv2.VideoCapture(0)\n",
+    "# cap = cv2.VideoCapture(0)\n",
     "\n",
-    "# Define the codec and create VideoWriter object\n",
-    "#fourcc = cv2.cv.CV_FOURCC(*'DIVX')\n",
-    "#out = cv2.VideoWriter('output.avi',fourcc, 20.0, (640,480))\n",
-    "out = cv2.VideoWriter('output.avi', -1, 20.0, (640,480))\n",
+    "# # Define the codec and create VideoWriter object\n",
+    "# #fourcc = cv2.cv.CV_FOURCC(*'DIVX')\n",
+    "# #out = cv2.VideoWriter('output.avi',fourcc, 20.0, (640,480))\n",
+    "# out = cv2.VideoWriter('output.avi', -1, 20.0, (640,480))\n",
     "\n",
-    "while(cap.isOpened()):\n",
-    "    ret, frame = cap.read()\n",
-    "    if ret==True:\n",
-    "        frame = cv2.flip(frame,0)\n",
+    "# while(cap.isOpened()):\n",
+    "#     ret, frame = cap.read()\n",
+    "#     if ret==True:\n",
+    "#         frame = cv2.flip(frame,0)\n",
     "\n",
-    "        # write the flipped frame\n",
-    "        out.write(frame)\n",
+    "#         # write the flipped frame\n",
+    "#         out.write(frame)\n",
     "\n",
-    "        cv2.imshow('frame',frame)\n",
-    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "            break\n",
-    "    else:\n",
-    "        break\n",
+    "#         cv2.imshow('frame',frame)\n",
+    "#         if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "#             break\n",
+    "#     else:\n",
+    "#         break\n",
     "\n",
-    "# Release everything if job is finished\n",
-    "cv2.destroyAllWindows()"
+    "# # Release everything if job is finished\n",
+    "# cv2.destroyAllWindows()"
    ]
   },
   {
@@ -732,8 +676,8 @@
    },
    "outputs": [],
    "source": [
-    "cap.release()\n",
-    "out.release()"
+    "# cap.release()\n",
+    "# out.release()"
    ]
   },
   {
@@ -744,115 +688,20 @@
    },
    "outputs": [],
    "source": [
-    "import smtplib\n",
+    "# import smtplib\n",
     "\n",
-    "sender_email = \"narayanhari1997@gmail.com\"\n",
-    "rec_email = \"narayanharimittal@gmail.com\"\n",
-    "password = ''\n",
-    "message = \"Hey, this was sent using python\"\n",
+    "# sender_email = \"narayanhari1997@gmail.com\"\n",
+    "# rec_email = \"narayanharimittal@gmail.com\"\n",
+    "# password = ''\n",
+    "# message = \"Hey, this was sent using python\"\n",
     "\n",
-    "server = smtplib.SMTP('smtp.gmail.com', 587)\n",
-    "server.starttls()\n",
-    "server.login(sender_email, password)\n",
-    "print(\"Login success\")\n",
-    "server.sendmail(sender_email, rec_email, message)\n",
-    "print(\"Email has been sent to \", rec_email)"
+    "# server = smtplib.SMTP('smtp.gmail.com', 587)\n",
+    "# server.starttls()\n",
+    "# server.login(sender_email, password)\n",
+    "# print(\"Login success\")\n",
+    "# server.sendmail(sender_email, rec_email, message)\n",
+    "# print(\"Email has been sent to \", rec_email)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "block print any error messages to stdout:\n",
-    "\n",
-    "import smtplib, ssl\n",
-    "\n",
-    "smtp_server = \"smtp.gmail.com\"\n",
-    "port = 587  # For starttls\n",
-    "sender_email = \"narayanhari1997@gmail.com\"\n",
-    "password = ''\n",
-    "\n",
-    "# Create a secure SSL context\n",
-    "context = ssl.create_default_context()\n",
-    "\n",
-    "# Try to log in to server and send email\n",
-    "try:\n",
-    "    server = smtplib.SMTP(smtp_server,port)\n",
-    "    server.ehlo() # Can be omitted\n",
-    "    server.starttls(context=context) # Secure the connection\n",
-    "    server.ehlo() # Can be omitted\n",
-    "    server.login(sender_email, password)\n",
-    "    # TODO: Send email here\n",
-    "except Exception as e:\n",
-    "    # Print any error messages to stdout\n",
-    "    print(e)\n",
-    "finally:\n",
-    "    server.quit() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import smtplib \n",
-    "  \n",
-    "# creates SMTP session \n",
-    "s = smtplib.SMTP('smtp.gmail.com', 587) \n",
-    "  \n",
-    "# start TLS for security \n",
-    "s.starttls() \n",
-    "  \n",
-    "# Authentication \n",
-    "s.login(\"narayanhari1997@gmail.com\", \"\") \n",
-    "  \n",
-    "# message to be sent \n",
-    "message = \"Message_you_need_to_send\"\n",
-    "  \n",
-    "# sending the mail \n",
-    "s.sendmail(\"narayanhari1997@gmail.com\", \"narayanharimittal@gmail.com\", message) \n",
-    "  \n",
-    "# terminating the session \n",
-    "s.quit() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "cv2.imshow('hi',photo)\n",
-    "cv2.waitKey()\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.imwrite('abc.jpg',photo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
